--- a/why/css/style.css
+++ b/why/css/style.css
@@ -14,7 +14,7 @@ html {
 
 /* Colors */
 .yellow{
-	color: #FFB600;
+	color: #e59918;
 }
 
 /* form */
@@ -32,7 +32,7 @@ html {
 	margin-right: 6px;
 }
 .form-stage-icon.active{
-	background-color:#FFB600;
+	background-color:#e59918;
 }
 .form-onboarding ::placeholder{
 	color:rgba(0,0,0,0.15);
@@ -52,7 +52,7 @@ html {
 	border-radius: 3px;
 }
 .form-onboarding input:focus, .form-onboarding select:focus{
-	border-color: #FFB600;
+	border-color: #e59918;
 	box-shadow: none;
 	outline: 0 none;
 }
@@ -122,8 +122,8 @@ html {
 	outline:none !important;	
 }
 .paymentcycle button.selected{
-	border:2px solid #FFB600;
-	color:#FFB600;
+	border:2px solid #e59918;
+	color:#e59918;
 }
 .btn.btn-decrement{
 	border-radius:5px 0px 0px 5px;
@@ -137,8 +137,8 @@ html {
 	border-left:none;
 }
 .btn.btn-decrement:hover, .btn.btn-increment:hover{
-	background:#FFB600;
-	border-color: #FFB600;
+	background:#e59918;
+	border-color: #e59918;
 }
 
 /* installation instructions */
@@ -2181,8 +2181,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #ffb600;
-  border-color: #ffb600;
+  background-color: #e59918;
+  border-color: #e59918;
 }
 .btn-primary:hover {
   color: #212529;
@@ -2197,8 +2197,8 @@ fieldset:disabled a.btn {
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #212529;
-  background-color: #ffb600;
-  border-color: #ffb600;
+  background-color: #e59918;
+  border-color: #e59918;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2420,25 +2420,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #ffb600;
-  border-color: #ffb600;
+  color: #e59918;
+  border-color: #e59918;
 }
 .btn-outline-primary:hover {
   color: #212529;
-  background-color: #ffb600;
-  border-color: #ffb600;
+  background-color: #e59918;
+  border-color: #e59918;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0 rgba(255, 182, 0, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #ffb600;
+  color: #e59918;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #212529;
-  background-color: #ffb600;
-  border-color: #ffb600;
+  background-color: #e59918;
+  border-color: #e59918;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0 rgba(255, 182, 0, 0.5);
@@ -2887,8 +2887,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #ffb600;
-  background-color: #ffb600;
+  border-color: #e59918;
+  background-color: #e59918;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0 rgba(255, 182, 0, 0.25);
@@ -2943,8 +2943,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #ffb600;
-  background-color: #ffb600;
+  border-color: #e59918;
+  background-color: #e59918;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3142,7 +3142,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #ffb600;
+  background-color: #e59918;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3168,7 +3168,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #ffb600;
+  background-color: #e59918;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3197,7 +3197,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0;
   margin-left: 0;
-  background-color: #ffb600;
+  background-color: #e59918;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3316,7 +3316,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #ffb600;
+  background-color: #e59918;
 }
 
 .nav-fill .nav-item {
@@ -3783,7 +3783,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #ffb600 !important;
+  background-color: #e59918 !important;
 }
 
 .bg-signup-repeat{
@@ -3945,7 +3945,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #ffb600 !important;
+  border-color: #e59918 !important;
 }
 
 .border-secondary {
@@ -7508,7 +7508,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #ffb600 !important;
+  color: #e59918 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -7742,8 +7742,8 @@ input[type=range]:focus + .rangeslider .rangeslider__handle {
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
-  background-color: #ffb600;
-  border-color: #ffb600;
+  background-color: #e59918;
+  border-color: #e59918;
   opacity: 0.6;
 }
 
@@ -7857,7 +7857,7 @@ input[type=range]:focus + .rangeslider .rangeslider__handle {
 }
 .sheet-row .entry-col .nav a.active * {
   opacity: 1;
-  fill: #ffb600;
+  fill: #e59918;
 }
 .sheet-row .entry-col .nav img,
 .sheet-row .entry-col .nav svg {
@@ -7945,7 +7945,7 @@ input[type=range]:focus + .rangeslider .rangeslider__handle {
   visibility: hidden;
 }
 .sheet-row .calendar-col .datepicker .active.day {
-  background: #ffb600;
+  background: #e59918;
   border-radius: 50%;
 }
 .sheet-row .calendar-col .datepicker .day {
